--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -46,6 +46,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     </nav>
     <nav style="background:#F2F7FF;"><a>  |  </a>
       <a href="#section7"><b>Continuous Education</b></a>    <a>  |  </a> 
+      <a href="#section7b"><b>Internships</b></a>    <a>  |  </a> 
       <a href="#section8"><b>Participation in Conferences</b></a>    <a>  |  </a> 
       <a href="#section9"><b>Peer-reviewing</b></a>    <a>   |  </a> 
       <a href="#section9b"><b>Master supervisions</b></a>    <a>   |  </a> 
@@ -283,6 +284,18 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   <li> <a target="_blank"> Statistics 2. Resal, University of Lausanne (Switzerland) (1 day) </a> </li>
   </ul>
   
+
+
+  <section id="section7b"></section>
+  <div class="mb-5">
+    <div class="text-3xl w-full font-bold">Internships</div>  </div> 
+      <ul class="list-disc mx-6 mb-10 grid gap-2"> 
+        <li> <a target="_blank">Alejandro Lomniczi (2020). Transgenerational effects of a mixture of Endocrine Disruptors on the hypothalamic transcriptome. Oregon Health & Science University (OHSU), Portland, USA. </a> </li>
+        <li> <a target="_blank">Alejandro Lomniczi (2018). Transgenerational effects of a mixture of Endocrine Disruptors on the hypothalamic transcriptome. Oregon Health & Science University (OHSU), Portland, USA.</a> </li>
+        <li> <a target="_blank"></a>Jean-Pierre Bourguignon & Anne-Simone Parent (2016). Role of GPR151 in the control of GnRH secretion. University of Liège, Belgium. </li>
+        <li> <a target="_blank"></a>Thierry Charlier (2015). The Role of androgens on the central control of sexual behavior of the japanese quail. University of Ohio, USA. </li>
+      </ul>
+
       <section id="section8"></section>
   <div class="mb-5"><div class="text-3xl w-full font-bold">Participation in Conferences</div></div>
       <div class="time-line-container grid gap-4 mb-10">
@@ -312,10 +325,10 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
           <section id="section9b"></section>
           <div class="mb-5"><div class="text-3xl w-full font-bold">Master's Student Supervision</div></div>
                 <ul class="list-disc mx-6 mb-10 grid gap-2">
-                  <li><p align="justify"><a>Marzia Campanile <i>(role as "co-supervisor")</i>. Effects of lactational and gestational exposure to a polychlorinated biphenyl mixture (Aroclor1254) in the dentate gyrus of POMC-EGFP transgenic mice (2019). GIGA-Neuroscience. University of Liege, Belgium </a> </p></li>
-                  <li><p align="justify"><a>Virginia Delli <i>(role as "co-supervisor")</i>. Effects of a perinatal exposure to the flame retardant compound BDE-47 on neurogenesis and cognition (2019). GIGA-Neuroscience. University of Liege, Belgium </a> </p></li>
-                  <li><p align="justify"><a>Eva Luz Lachat <i>(role as "expert")</i>. Bisphenol A and autism spectrum disorder in humans, a systematic review of the literature (2023). University of Lausanne, Switzerland</a> </p></li>
-                  <li><p align="justify"><a>Anna Dreier <i>(role as "expert")</i>. Next-generation human iPSC-derived 3D brain systems to study chemical-induced myelin disruption (2023). University of Lausanne, Switzerland </a> </p></li>
+                  <li><p align="justify"><a>Eva Luz Lachat <i>(co-supervisor)</i>. Bisphenol A and autism spectrum disorder in humans, a systematic review of the literature (2023). University of Lausanne, Switzerland</a> </p></li>
+                  <li><p align="justify"><a>Anna Dreier <i>(expert)</i>. Next-generation human iPSC-derived 3D brain systems to study chemical-induced myelin disruption (2023). University of Lausanne, Switzerland </a> </p></li>
+                  <li><p align="justify"><a>Marzia Campanile <i>(co-supervisor)</i>. Effects of lactational and gestational exposure to a polychlorinated biphenyl mixture (Aroclor1254) in the dentate gyrus of POMC-EGFP transgenic mice (2019). GIGA-Neuroscience. University of Liege, Belgium </a> </p></li>
+                  <li><p align="justify"><a>Virginia Delli <i>( co-supervisor)</i>. Effects of a perinatal exposure to the flame retardant compound BDE-47 on neurogenesis and cognition (2019). GIGA-Neuroscience. University of Liege, Belgium </a> </p></li>
                           </ul>
        
 
