--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -290,10 +290,10 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   <div class="mb-5">
     <div class="text-3xl w-full font-bold">Internships</div>  </div> 
       <ul class="list-disc mx-6 mb-10 grid gap-2"> 
-        <li> <a target="_blank">Alejandro Lomniczi (2020). Transgenerational effects of a mixture of Endocrine Disruptors on the hypothalamic transcriptome. Oregon Health & Science University (OHSU), Portland, USA. </a> </li>
-        <li> <a target="_blank">Alejandro Lomniczi (2018). Transgenerational effects of a mixture of Endocrine Disruptors on the hypothalamic transcriptome. Oregon Health & Science University (OHSU), Portland, USA.</a> </li>
-        <li> <a target="_blank"></a>Jean-Pierre Bourguignon & Anne-Simone Parent (2016). Role of GPR151 in the control of GnRH secretion. University of Liège, Belgium. </li>
-        <li> <a target="_blank"></a>Thierry Charlier (2015). The Role of androgens on the central control of sexual behavior of the japanese quail. University of Ohio, USA. </li>
+        <li> <a target="_blank">Dr. Alejandro Lomniczi (2020). Transgenerational effects of a mixture of Endocrine Disruptors on the hypothalamic transcriptome. Oregon Health & Science University (OHSU), Portland, USA. </a> </li>
+        <li> <a target="_blank">Dr. Alejandro Lomniczi (2018). Transgenerational effects of a mixture of Endocrine Disruptors on the hypothalamic transcriptome. Oregon Health & Science University (OHSU), Portland, USA.</a> </li>
+        <li> <a target="_blank"></a>Prof. Jean-Pierre Bourguignon & Prof. Anne-Simone Parent (2016). Role of GPR151 in the control of GnRH secretion. University of Liège, Belgium. </li>
+        <li> <a target="_blank"></a>Prof. Thierry Charlier (2015). The Role of androgens on the central control of sexual behavior of the japanese quail. University of Ohio, USA. </li>
       </ul>
 
       <section id="section8"></section>
