--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -54,7 +54,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <nav style="background:#F2F7FF;"><a>  |  </a>
       <a href="#section10"><b>Active Membership</b></a>    <a>  |  </a> 
       <a href="#section11"><b>Language Skills</b></a>    <a>  |  </a> 
-      <a href="#section12"><b>Certifications</b></a>    <a>  |  </a>
+      <a href="#section12"><b>Certifications TEST</b></a>    <a>  |  </a>
     </nav>
 
 </div>
