--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -54,7 +54,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <nav style="background:#F2F7FF;"><a>  |  </a>
       <a href="#section10"><b>Active Membership</b></a>    <a>  |  </a> 
       <a href="#section11"><b>Language Skills</b></a>    <a>  |  </a> 
-      <a href="#section12"><b>Certifications TEST</b></a>    <a>  |  </a>
+      <a href="#section12"><b>Certifications  </b></a>    <a>  |  </a>
     </nav>
 
 </div>
@@ -76,8 +76,9 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   Experienced and multidisciplinary scientist & consultant with a background in toxicology, biology, environmental 
   and computational sciences. My main objective is to develop computational and bioinformatic tools that 
   can expand scientific knowledge and make a valuable contribution to public health and society. My goal 
-  is to achieve a comprehensive understanding of the biological mechanisms and risks associated with 
-  various exposures to humans and the environment.
+  is to achieve a comprehensive understanding of the biological mechanisms and risks associated with exposures 
+  to environmental signals (i.e. nutrition, chemicals).
+
   </div>
 
       <section id="section2"></section>
@@ -85,15 +86,20 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
     <ul class="list-disc md:columns-2 columns-1 mx-6">
 
-    <li><b>Toxicology </b></li>
-        <div style="line-height:60%;"> <br></div>
-    <li><b>Biostatistics / Advanced Statistics</b></li>
-     <div style="line-height:60%;"> <br></div>
-    <li><b>Epidemiology</b></li>
-     <div style="line-height:60%;"> <br></div>
+    
+      <li><b>Multi-omics analysis</b>
+        <ol style="list-style-type: circle; padding-bottom: 0;">
+              <li style="margin-left:2em">Transcriptomics (scRNAseq)</li>
+              <li style="margin-left:2em; padding-bottom: 0;">Lipidomics</li>
+              <li style="margin-left:2em; padding-bottom: 0;">Metabolomics</li>
+              <li style="margin-left:2em; padding-bottom: 0;">Proteomics</li>
+         </ol>
+</li>
+
+<div style="line-height:60%;"> <br></div>
+
     <li><b>Bioinformatics & computational biology</b>
             <ol style="list-style-type: circle; padding-bottom: 0;">
-                  <li style="margin-left:2em">Multiomics: scRNAseq, ChIPSeq,...</li>
                   <li style="margin-left:2em; padding-bottom: 0;">R (RStudio)</li>
                   <li style="margin-left:2em; padding-bottom: 0;">Python (Anaconda, PyCharm)</li>
                   <li style="margin-left:2em; padding-bottom: 0;">C++</li>
@@ -104,7 +110,17 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
                   <li style="margin-left:2em; padding-bottom: 0;">Version Control (Git)</li>
              </ol>
     </li>
+    
+<div style="line-height:60%;"> <br></div>
+<li><b>Biostatistics / Advanced Statistics</b></li>
 
+    <div style="line-height:60%;"> <br></div>
+    <li><b>Scientific writing</b></li>
+    <div style="line-height:60%;"> <br></div>
+    <li><b>Toxicology </b></li>
+ <div style="line-height:60%;"> <br></div>
+<li><b>Epidemiology</b></li>
+<div style="line-height:60%;"> <br></div>
 
     <li><b>Molecular biology & Epigenetics</b>
             <ol style="list-style-type: circle; padding-bottom: 0;">
@@ -131,7 +147,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
                     <li style="margin-left:2em">Scientific Illustration</li>
              </ol></li>
               <div style="line-height:60%;"> <br></div>
-    <li><b>Scientific writing</b></li>
+
   </ul>
     </div>
 
@@ -147,28 +163,28 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     />
 
    <TimeLineElement
-      title="Project Coordinator - Pesticide Monitoring "
+      title="Project Coordinator - Pesticide Monitoring Project"
       subtitle="From 2024 - Today at Environmental Science & Research Consulting (as Independent Consultant)"
       desc="Project Coordinator of the project 'Pesticide Exposure Assessment of the Swiss Non-Occupational Sensitive Population' (www.pestizidmonitoring.ch)"
     />
 
      <TimeLineElement
-      title="Research Project - Nathalie Chèvre's Team"
+      title="Data Scientist / Bioinformatician - Nathalie Chèvre's Team"
       subtitle="From 2024 - Today at University of Lausanne, Switzerland"
-      desc="In silico tools / Chemoinformatics - Nathalie Chèvre's team. Development of an in silico machine learning tool to identify chemicals having Endocrine-Disrupting activity. Methods: R, Python, in silico models, NAMs, machine learning"
+      desc="In silico tools / Chemoinformatics - Nathalie Chèvre's team. Postdoctoral position to develop an in silico machine learning tool to identify chemicals having Endocrine-Disrupting activity. Methods: R, Python, in silico models, NAMs, machine learning"
     />
 
 
       <TimeLineElement
-      title="Postdoctoral fellow - Marie-Gabrielle Zurich's Team (50%)"
+      title="Bioinformatician / Toxicologist - Marie-Gabrielle Zurich's Team (50%)"
       subtitle="From 2024 - Today at University of Lausanne, Switzerland"
-      desc="Role as biostatistician/bioinformatician - Marie-Gabrielle Zurich's team. Analysis of omics data and development of statistical tools for in vitro toxicological studies. Methods: metabolomics, transcriptomics, scRNAseq, R, Python, organoids, adverse-outcome pathways (AOPs)"
+      desc="Role as biostatistician/bioinformatician - Marie-Gabrielle Zurich's team. Postdoctoral position to perform multiomics data analysis & to develop statistical tools for in vitro toxicological studies. Methods: lipidomics, metabolomics, transcriptomics, scRNAseq, R, Python, organoids, adverse-outcome pathways (AOPs)"
     />
    
     <TimeLineElement
-      title="Postdoctoral fellow - Fanny Langlet's Team (50%)"
+      title="Data Scientist / Bioinformatician - Fanny Langlet's Team (50%)"
       subtitle="From 2021 - Today at University of Lausanne, Switzerland"
-      desc="Role as bioinformatician / biologist - Fanny Langlet's team. Development of novel methods to decipher the role of cell-cell communication involved in the neuroendocrine control of energy balance. Technologies: scRNAseq, transcriptomics, tracing, cell-cell communication, R, Python, HPC, machine learning"
+      desc="Role as bioinformatician / biologist - Fanny Langlet's team. Postdoctoral position to develop novel methods to decipher the role of cell-cell communication involved in the neuroendocrine control of energy balance. Technologies: scRNAseq, transcriptomics, tracing, cell-cell communication, R, Python, HPC, machine learning"
     />
 
      <TimeLineElement
