--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -164,7 +164,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
    <TimeLineElement
       title="Project Coordinator - Pesticide Monitoring Project"
-      subtitle="From 2024 - Today at Environmental Science & Research Consulting (as Independent Consultant)"
+      subtitle="From 2024 - Today at Environmental Science & Research Consulting GmBH (as Independent Consultant)"
       desc="Project Coordinator of the project 'Pesticide Exposure Assessment of the Swiss Non-Occupational Sensitive Population' (www.pestizidmonitoring.ch)"
     />
 
@@ -173,7 +173,6 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       subtitle="From 2024 - Today at University of Lausanne, Switzerland"
       desc="In silico tools / Chemoinformatics - Nathalie Chèvre's team. Postdoctoral position to develop an in silico machine learning tool to identify chemicals having Endocrine-Disrupting activity. Methods: R, Python, in silico models, NAMs, machine learning"
     />
-
 
       <TimeLineElement
       title="Bioinformatician / Toxicologist - Marie-Gabrielle Zurich's Team (50%)"
