--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,14 +29,11 @@ const last_posts = posts.slice(0, 3);
     <div class="pb-12 mt-5">
           <div class="text-4xl py-4 font-bold">David Lopez Rodriguez, PhD</div>
           <div class="text-1xl  font-bold"> • Data Scientist / Bioinformatician / Toxicologist - Lausanne University </div>
-          <div class="text-1xl font-bold"> • Project Coordinator - Pesticide Monitoring Project </div>
-          <div class="text-1xl font-bold"> • Independent consultant </div>
-
-
-
+          <div class="text-1xl font-bold"> • Project Coordinator of the <i>'Pesticide Monitoring Project'</i> - Environmental Science & Research Consulting GmBH</div>
+      
     
           <p align="justify">
-          <div class="py-7"><text class="text-lg"> 
+          <div class="py-3"><text class="text-lg"> 
       
                <div class="mb-5 text-justify">
              I am multidisciplinary researcher with an expertise in biology, toxicology, 
@@ -47,17 +44,21 @@ const last_posts = posts.slice(0, 3);
                As a researcher my focus lies in creating computational tools allowing to advance scientific knowledge to improve public health 
                and environmental policies. I strive to develop a comprehensive understanding of the risks associated with chemical exposures 
                and gain an understanding on the biological process behind their effects.          
-           
-                <div style="line-height:40%;"> <br></div>
-                
+          
+              </div>
+            </text> </div></p>
+                <div class="text-0.5xl font-bold"> • Independent consultant </div>
+            <p align="justify">
+                  <div class="py-3"><text class="text-lg"> 
+
               As an independent consultant, I offer my expertise in bioinformatics, 
               biostatistics and multiomics to scientists and industries.
               My skill set encompasses a spectrum of offerings, ranging from multiomics data, 
               to intricate statistical modeling, including the creation of insightful data visualizations 
               and their subsequent interpretation.
-           </div>
+            </div>
 
-               </text> </div></p>
+            </text> </div></p>
 
            <div class="py-4">
            <text class="text-lg"><p align="justify">  <b>	Disciplines:</b> 
