--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,8 +28,8 @@ const last_posts = posts.slice(0, 3);
 
     <div class="pb-12 mt-5">
           <div class="text-4xl py-4 font-bold">David Lopez Rodriguez, PhD</div>
-          <div class="text-1xl  font-bold"> • Data Scientist / Bioinformatician / Toxicologist - Lausanne University </div>
-          <div class="text-1xl font-bold"> • Project Coordinator of the <i>'Pesticide Monitoring Project'</i> - Environmental Science & Research Consulting GmBH</div>
+          <div class="text-2xl   font-bold">Data Scientist / Bioinformatician / Toxicologist - Lausanne University </div>
+          <div class="text-2xl py-1 font-bold">Project Coordinator <i>'Pesticide Monitoring Project'</i></div>
       
     
           <p align="justify">
@@ -47,7 +47,7 @@ const last_posts = posts.slice(0, 3);
           
               </div>
             </text> </div></p>
-                <div class="text-0.5xl font-bold"> • Independent consultant </div>
+                <div class="text-2xl font-bold">Independent consultant </div>
             <p align="justify">
                   <div class="py-3"><text class="text-lg"> 
 
