--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,7 @@ const last_posts = posts.slice(0, 3);
 
 
 
+
 <BaseLayout>
 
 <!-- Google tag (gtag.js) -->
@@ -28,48 +29,57 @@ const last_posts = posts.slice(0, 3);
 
     <div class="pb-12 mt-5">
           <div class="text-4xl py-4 font-bold">David Lopez Rodriguez, PhD</div>
-          <div class="text-2xl   font-bold">Data Scientist / Bioinformatician / Toxicologist - Lausanne University </div>
-          <div class="text-2xl py-1 font-bold">Project Coordinator <i>'Pesticide Monitoring Project'</i></div>
+          <div class="text-2xl   font-bold"> 
+            <span class='bigger'>(1)</span>  
+            <span class='headmain'>Data Scientist / Bioinformatician / Toxicologist - Lausanne University </span> </div>
+          <div class="text-2xl py-1 font-bold">
+            <span class='bigger'>(2)</span> 
+            <span class='headmain'> Project Coordinator 
+              <a href="https://www.pestizidmonitoring.ch/projet-de-recherche" target="_blank"><i>'Pesticide Monitoring Project'</i> </a>  </span></div>
       
     
           <p align="justify">
-          <div class="py-3"><text class="text-lg"> 
+          <div class="py-1"><text class="text-lg"> 
       
                <div class="mb-5 text-justify">
              I am multidisciplinary researcher with an expertise in biology, toxicology, 
-              environmental and computational sciences.
-              
-               <div style="line-height:40%;"> <br></div>
-               
-               As a researcher my focus lies in creating computational tools allowing to advance scientific knowledge to improve public health 
+              environmental and computational sciences. As a researcher my focus lies in creating computational tools allowing to advance scientific knowledge to improve public health 
                and environmental policies. I strive to develop a comprehensive understanding of the risks associated with chemical exposures 
                and gain an understanding on the biological process behind their effects.          
           
               </div>
             </text> </div></p>
-                <div class="text-2xl font-bold">Independent consultant </div>
-            <p align="justify">
-                  <div class="py-3"><text class="text-lg"> 
-
+                <div class="text-2xl font-bold">
+                  <span class='bigger'>(3)</span> 
+                  <span class='headmain'>Independent consultant</span> </div>
+         
+                  <div class="py-1"><text class="text-lg"> 
+                    <p align="justify">
               As an independent consultant, I offer my expertise in bioinformatics, 
               biostatistics and multiomics to scientists and industries.
               My skill set encompasses a spectrum of offerings, ranging from multiomics data, 
               to intricate statistical modeling, including the creation of insightful data visualizations 
               and their subsequent interpretation.
             </div>
+            </text>
+            <div class="py-3">  </div>
+            <text class="text-lg"><p align="justify">  <b>	Disciplines:</b> 
+              Bioinformatics/Biostatistics, Toxicology, Endocrinology, Environmental Science, Environmental Epidemiology, Chemical Risk assessment. </p> </text>
 
-            </text> </div></p>
+              <text class="text-lg"><p align="justify">  <b>	Expertise Keywords:</b> Bioinformatics, Chemo-informatics, Neuroendocrinology, 
+                Multiomics, Environmental Sciences, Endocrine Disruption, Toxicology, Computational Biology, Adverse outcome pathways, 
+                Chemical Risk Assessment, Biostatistics, Molecular Biology, Physiology, Reproductive Toxicology. </p> </text>
 
-           <div class="py-4">
-           <text class="text-lg"><p align="justify">  <b>	Disciplines:</b> 
-           Bioinformatics/Biostatistics, Toxicology, Endocrinology, Environmental Science, Environmental Epidemiology, Chemical Risk assessment. </p> </text>
-           </div>
+              </div>
+            
+   
+           
+            </div></p>
+            
+        
            
   
-           <text class="text-lg"><p align="justify">  <b>	Expertise Keywords:</b> Bioinformatics, Chemo-informatics, Neuroendocrinology, 
-            Multiomics, Environmental Sciences, Endocrine Disruption, Toxicology, Computational Biology, Adverse outcome pathways, 
-            Chemical Risk Assessment, Biostatistics, Molecular Biology, Physiology, Reproductive Toxicology </p> </text>
-       
+  
 
 
           <div class="mt-8">
