--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,8 +34,7 @@ const last_posts = posts.slice(0, 3);
             <span class='headmain'>Data Scientist / Bioinformatician / Toxicologist - Lausanne University </span> </div>
           <div class="text-2xl py-1 font-bold">
             <span class='bigger'>(2)</span> 
-            <span class='headmain'> Project Coordinator 
-              <a href="https://www.pestizidmonitoring.ch/projet-de-recherche" target="_blank"><i>'Pesticide Monitoring Project'</i> </a>  </span></div>
+            <span class='headmain'> Project Coordinator of the <a href="https://www.pestizidmonitoring.ch/projet-de-recherche" target="_blank"><i>'Pesticide Monitoring' study</i> </a>  </span></div>
       
     
           <p align="justify">
