--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -100,14 +100,14 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
     <li><b>Bioinformatics & computational biology</b>
             <ol style="list-style-type: circle; padding-bottom: 0;">
-                  <li style="margin-left:2em; padding-bottom: 0;">R (RStudio)</li>
-                  <li style="margin-left:2em; padding-bottom: 0;">Python (Anaconda, PyCharm)</li>
-                  <li style="margin-left:2em; padding-bottom: 0;">C++</li>
+                  <li style="margin-left:2em; padding-bottom: 0;">R </li>
+                  <li style="margin-left:2em; padding-bottom: 0;">Python </li>
                   <li style="margin-left:2em; padding-bottom: 0;">UNIX/Shell</li>
                   <li style="margin-left:2em; padding-bottom: 0;">High-performance Computing (HPC)</li>
                   <li style="margin-left:2em; padding-bottom: 0;">Machine Learning</li>
                   <li style="margin-left:2em; padding-bottom: 0;">RShiny</li>
                   <li style="margin-left:2em; padding-bottom: 0;">Version Control (Git)</li>
+                  <li style="margin-left:2em; padding-bottom: 0;">C++</li>
              </ol>
     </li>
     
@@ -115,7 +115,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 <li><b>Biostatistics / Advanced Statistics</b></li>
 
     <div style="line-height:60%;"> <br></div>
-    <li><b>Scientific writing</b></li>
+    <li><b>Scientific writing & Communication</b></li>
     <div style="line-height:60%;"> <br></div>
     <li><b>Toxicology </b></li>
  <div style="line-height:60%;"> <br></div>
@@ -136,7 +136,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
               <div style="line-height:60%;"> <br></div>
     <li><b>Neuroendocrinology & Physiology</b>
              <ol style="list-style-type: circle; padding-bottom: 0;">
-                    <li style="margin-left:2em">ICH, WB, Microscopy, ELISA,...</li>
+                    <li style="margin-left:2em">IHC, WB, Microscopy, ELISA,...</li>
              </ol></li>
               <div style="line-height:60%;"> <br></div>
     <li><b>Web design</b>
@@ -165,7 +165,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
    <TimeLineElement
       title="Project Coordinator - Pesticide Monitoring Project"
       subtitle="From 2024 - Today at Environmental Science & Research Consulting GmBH (as Independent Consultant)"
-      desc="Project Coordinator of the project 'Pesticide Exposure Assessment of the Swiss Non-Occupational Sensitive Population' (www.pestizidmonitoring.ch)"
+      desc="Project Coordinator of the 'Pesticide Exposure Assessment of the Swiss Non-Occupational Sensitive Population' study (www.pestizidmonitoring.ch)"
     />
 
      <TimeLineElement
