--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,6 +39,17 @@ const last_posts = posts.slice(0, 3);
               <span class='bigger'>(3)</span> 
               <span class='headmain'>Independent consultant</span> </div>
     
+
+              <p align="justify">
+                <div class="py-1"><text class="text-lg"> 
+            
+                     <div class="mb-5 text-justify">
+ 
+                
+                    </div>
+                  </text> </div></p>
+
+
           <p align="justify">
           <div class="py-1"><text class="text-lg"> 
       
