--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,7 @@ const last_posts = posts.slice(0, 3);
               <p align="justify">
                 <div class="py-1"><text class="text-lg"> 
             
-                     <div class="mb-3 text-justify">
+                     <div class="mb-1 text-justify">
  
                 
                     </div>
@@ -53,11 +53,10 @@ const last_posts = posts.slice(0, 3);
           <p align="justify">
           <div class="py-1"><text class="text-lg"> 
       
-               <div class="mb-3 text-justify">
+               <div class="mb-1 text-justify">
              I am multidisciplinary researcher with an expertise in biology, toxicology, 
-              environmental and computational sciences. As a researcher my focus lies in creating computational tools allowing to advance scientific knowledge to improve public health 
-               and environmental policies. I strive to develop a comprehensive understanding of the risks associated with chemical exposures 
-               and gain an understanding on the biological process behind their effects.          
+             computational and environmental sciences. As a researcher my focus lies in creating computational tools allowing to advance scientific knowledge to improve public health 
+               and environmental policies. I strive to develop a comprehensive understanding of the risks associated with chemical exposures and gain an understanding on the biological process behind their effects.          
           
               </div>
             </text> </div></p>
@@ -65,19 +64,16 @@ const last_posts = posts.slice(0, 3);
          
                   <div class="py-1"><text class="text-lg"> 
                     <p align="justify">
-              As an independent consultant, I offer my expertise in bioinformatics, 
-              biostatistics and multiomics to scientists and industries.
-              My skill set encompasses a spectrum of offerings, ranging from multiomics data, 
-              to intricate statistical modeling, including the creation of insightful data visualizations 
-              and their subsequent interpretation.
+              As an independent consultant, I offer my expertise in bioinformatics, biostatistics and multiomics to scientists and industries.
+              My skill set encompasses a spectrum of offerings, ranging from multiomics data, to intricate statistical modeling, including the creation of insightful data visualizations and their subsequent interpretation.
             </div>
             </text>
-            <div class="py-3">  </div>
+            <div class="py-1">  </div>
             <text class="text-lg"><p align="justify">  <b>	Disciplines:</b> 
-              Bioinformatics/Biostatistics, Toxicology, Endocrinology, Environmental Science, Environmental Epidemiology, Chemical Risk assessment. </p> </text>
-
-              <text class="text-lg"><p align="justify">  <b>	Expertise Keywords:</b> Bioinformatics, Chemo-informatics, Neuroendocrinology, 
-                Multiomics, Environmental Sciences, Endocrine Disruption, Toxicology, Computational Biology, Adverse outcome pathways, 
+              Data Science, Bioinformatics/Biostatistics, Toxicology, Endocrinology, Environmental Science, Environmental Epidemiology, Neuroscience. </p> </text>
+              <div class="py-1">  </div>
+              <text class="text-lg"><p align="justify">  <b>	Expertise Keywords:</b> Bioinformatics, Multiomics, Chemo-informatics, Toxicology, Neuroendocrinology, 
+               Environmental Sciences, Endocrine Disruption, Computational Biology, Adverse outcome pathways, 
                 Chemical Risk Assessment, Biostatistics, Molecular Biology, Physiology, Reproductive Toxicology. </p> </text>
 
               </div>
