--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -77,7 +77,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   and computational sciences. My main objective is to develop computational and bioinformatic tools that 
   can expand scientific knowledge and make a valuable contribution to public health and society. My goal 
   is to achieve a comprehensive understanding of the biological mechanisms and risks associated with exposures 
-  to environmental signals (i.e. nutrition, chemicals).
+  to environmental signals (i.e. nutritional cues, chemicals).
 
   </div>
 
@@ -87,7 +87,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <ul class="list-disc md:columns-2 columns-1 mx-6">
 
     
-      <li><b>Multi-omics analysis</b>
+      <li><b>Multi-omics Data Analysis</b>
         <ol style="list-style-type: circle; padding-bottom: 0;">
               <li style="margin-left:2em">Transcriptomics (scRNAseq)</li>
               <li style="margin-left:2em; padding-bottom: 0;">Lipidomics</li>
@@ -134,19 +134,21 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
                    <li style="margin-left:2em">In Silico Methods</li>
              </ol></li>
               <div style="line-height:60%;"> <br></div>
-    <li><b>Neuroendocrinology & Physiology</b>
+    <li><b>Wet Lab & Physiology</b>
              <ol style="list-style-type: circle; padding-bottom: 0;">
-                    <li style="margin-left:2em">IHC, WB, Microscopy, ELISA,...</li>
+                    <li style="margin-left:2em">IHC, WB, Confocal Microscopy, ELISA,...</li>
              </ol></li>
               <div style="line-height:60%;"> <br></div>
-    <li><b>Web design</b>
+    <li><b>Software Development & Web Design </b>
              <ol style="list-style-type: circle; padding-bottom: 0;">
-                    <li style="margin-left:2em">RShiny</li>
+                    <li style="margin-left:2em">Github, roxigen2,...</li>
+                    <li style="margin-left:2em">RShiny, SQL (DBI)</li>
                     <li style="margin-left:2em">WordPress</li>
                     <li style="margin-left:2em"> Photoshop, InDesign, Illustrator</li>
                     <li style="margin-left:2em">Scientific Illustration</li>
              </ol></li>
               <div style="line-height:60%;"> <br></div>
+    <li><b>Project management & Coordination </b>
 
   </ul>
     </div>
