--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -73,7 +73,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
      <div class="text-2xl w-full font-bold mb-0 mt-10">Manuscripts in preparation <font size="2"> (as of 07/23) </font>    </div>
   <div class="divider my-0"></div>
   
-<div class="text-lg"> <p align="justify"> Brunner M*, <u>Lopez-Rodriguez D</u>*, Messina A, Thorens B, Santoni F, Langlet F. <i> Pseudospatial transcriptional gradient analysis of hypothalamic ependymal cells challenges tanycyte classification. Submitted to Cell Metabolism. </i>  </p> </div>
+<div class="text-lg"> <p align="justify"> Brunner M*, <u>Lopez-Rodriguez D</u>*, Messina A, Thorens B, Santoni F, Langlet F. <i> Pseudospatial transcriptional gradient analysis of hypothalamic ependymal cells challenges tanycyte classification. Submitted to Nature Communications. </i>  </p> </div>
 <div class="text-lg"> <p align="justify" style="margin-left: 20px">  &#8594; *Co-first authorship</p> </div>
 <div class="text-lg"> <p align="justify" style="margin-left: 20px"> <b>  &#8594; BioRxiv preprint: https://www.biorxiv.org/content/10.1101/2023.07.06.547914v1 </b> </p> </div>
 <br>
@@ -143,11 +143,11 @@ import HorizontalCard from "../components/HorizontalCard.astro";
     <div class="text-2xl w-full font-bold mb-0 mt-10">Press releases </div>
   <div class="divider my-0"></div>
 
-<a class="text-lg" href="https://www.endocrine-abstracts.org/ea/0063/ea0063oc8.3"><i> Endocrine society</i></a>
-
-<br>
-
-<a class="text-lg" href="https://www.endocrine-abstracts.org/ea/0063/ea0063oc8.3"><i> University of Liege</i></a>
+  <a class="text-lg" href="https://assets-global.website-files.com/6543c26983f71e6ff11cd4ed/65e6959467817e63e77710c2_20230304%20PR%20PEASSP%20Fr.pdf"><i> Pesticide Monitoring Study</i></a>
+  <br>
+  <a class="text-lg" href="https://www.endocrine-abstracts.org/ea/0063/ea0063oc8.3"><i> Endocrine society</i></a>
+  <br>
+  <a class="text-lg" href="https://www.endocrine-abstracts.org/ea/0063/ea0063oc8.3"><i> University of Liege</i></a>
 
 
 
